cjange form.html

--- a/templates/form.html
+++ b/templates/form.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <form action="/" method="post">
+    <form action="" method="post">
         <div>
             <label for="gender">Medical Gender:</label> <br>
             <input type="text" id="gender" name="gender">
@@ -57,6 +57,36 @@
         45: heartburn
         122: Hiccups
         149: Hot flushes
-        40: Increased thurst</p>
+        40: Increased thurst
+        73: Itching Eyes
+        96: Itching in the nose
+        35: Lip Swelling
+        235: Memory gap
+        44: Nasuea
+        136: Neck Pain
+        114: Nervesnouss
+        133: Night Cough
+        12: Pain in the limbs
+        203: Pain on swallowing
+        37: Palpitations
+        140: paralysis
+        54: reduced appetite
+        14: Runny Nose
+        29: Shortness of breaths
+        124: Skin Rash
+        52: Sleeplessness
+        95: Sneezing
+        13: Store Throat
+        64: Sputum
+        179: Stomach Burning
+        28: Stuffy Nose
+        138; Sweating
+        248: Swollen glands in the armpit
+        169: Swollen glands on the neck
+        211: tears
+        16: Tiredness
+        115: Tremor at rest
+        144: Unconciousness ,short
+        </p>
 </body>
 </html>
