Update and rename index 2.html to index2.html

--- a/templates/index2.html
+++ b/templates/index2.html
@@ -21,7 +21,7 @@
                     <a href="/" class="navbar__links">About</a>
                 </li>
                 <li class="navbar__item">
-                    <a href="form.html" class="navbar__links">Diagnosis</a>
+                    <a href="/form" class="navbar__links">Diagnosis</a>
                 </li>
                 <li class="navbar__item">
                     <a href="/" class="navbar__links">Sign Up</a>
